2012-03-07  Moritz Bunkus  <moritz@bunkus.org>

	* build system: The C++ compiler must now support the C++11
	keyword 'nullptr'. configure checks for it. For GCC this means at
	least v4.6.0.

	* mkvinfo: new feature: mkvinfo will output the track ID that
	mkvmerge and mkvextract would use for a track. This information is
	shown alongside the "track number" element in verbose mode and in
	the track summary in summary mode.

	* mkvmerge, mmg: enhancement: The "--default-duration" in mkvmerge
	and the "FPS" drop down box in mmg now accept "p" or "i" as a unit
	-- as in e.g. "25p" or "50i". Several commonly used values have
	been added to mmg's "FPS" drop down box.

	* mkvmerge: bug fix: When using an external timecode file with
	AVC/h.264 video the default duration will be set to the most-often
	used duration in the timecode file.

	* mmg: enhancement: Added the values "50", "60" and "48000/1001"
	to the list of commonly used values for the "FPS" input field.

	* mkvmerge: bug fix: AVC/h.264 packetizer: The value given with
	"--default-duration" is now again interpreted as the number of
	"frames per second". The conversion to "fields per second" is done
	internally; the user doesn't have to think about it, though.

	* mkvmerge: bug fix: SRT subtitles: timecodes can contain the
	minus sign before any digit, not just before the first one.

2012-03-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Sometimes non-AC3 files were mistakenly for
	AC3 after the re-write of the AC3 handling code on
	2012-02-26. This has been rectified. Fix for bug 723.

2012-03-04  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: mkvmerge will keep the "enabled" track
	header flag when muxing. mkvmerge will also output its value in
	verbose identification mode as "enabled_track".

	* mkvmerge: enhancement: MicroDVD text subtitles are recognized as
	an unsupported format instead of an unknown format.

	* mmg: The warning that no default duration/FPS has been given for