@@ -1,3 +1,9 @@
+2012-03-08  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed wrong calculation of the maximum number
+	of ns per cluster in certain fringe cases if timecode scale was
+	set to "auto" mode ("--timecode-scale -1"). Fix for bug 707.
+
 2012-03-07  Moritz Bunkus  <moritz@bunkus.org>
 
 	* build system: The C++ compiler must now support the C++11
